--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name" : "无敌24点",
+    "name" : "24点游戏·观测站",
     "appid" : "__UNI__4357127",
-    "description" : "24点小游戏（Uni-App 版）",
+    "description" : "24点小游戏",
     "versionName" : "1.0.0",
     "versionCode" : "100",
     "vueVersion" : "3",
@@ -14,7 +14,8 @@
         },
         "distribute" : {
             "android" : {
-                "permissions" : []
+                "permissions" : [],
+                "abiFilters" : [ "armeabi-v7a", "arm64-v8a" ]
             },
             "ios" : {
                 "dSYMs" : false
