--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name" : "24点游戏·观测站",
+    "name" : "24点程序·观测站",
     "appid" : "__UNI__4357127",
-    "description" : "24点小游戏",
+    "description" : "24点小程序",
     "versionName" : "1.0.0",
     "versionCode" : "100",
     "vueVersion" : "3",
@@ -14,6 +14,8 @@
         },
         "distribute" : {
             "android" : {
+                "minSdkVersion" : 21,
+                "targetSdkVersion" : 34,
                 "permissions" : [],
                 "abiFilters" : [ "armeabi-v7a", "arm64-v8a" ]
             },
@@ -59,7 +61,12 @@
             }
         }
     },
-    "mp-weixin" : {},
+    "mp-weixin" : {
+        "appid" : "wx182f62e6b98e0d06",
+        "setting" : {
+            "urlCheck" : true
+        }
+    },
     "mp-alipay" : {},
     "h5" : {
         "devServer" : {}
