--- a/manifest.json
+++ b/manifest.json
@@ -56,7 +56,13 @@
                 }
             },
             "sdkConfigs" : {
-                "ad" : {}
+                "ad" : {
+                    "ks" : {},
+                    "sigmob" : {},
+                    "zy" : {},
+                    "fl" : {},
+                    "jl" : {}
+                }
             }
         }
     },
