--- a/manifest.json
+++ b/manifest.json
@@ -67,7 +67,7 @@
         }
     },
     "mp-weixin" : {
-        "appid" : "wx0d5bca3652116f7e",
+        "appid" : "wx58faf81d08ca037c",
         "setting" : {
             "urlCheck" : true
         }
